respoonsive navbar done

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   
 </head>
 <body>
+    {% include 'includes/navbar.html' %}
     {% block content %}
         <!--content goes here-->
     {% endblock %}
