--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-p {
+body {
     font-size: 15px;
+    line-height: 1.5;
+    background-color: white;
 }
+
