--- a/templates/base.html
+++ b/templates/base.html
@@ -15,5 +15,6 @@
     {% block content %}
         <!--content goes here-->
     {% endblock %}
+    {% include 'includes/footer.html' %}
 </body>
 </html>
