--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -36,15 +36,17 @@
                         <div class="pt-2 pb-8">
                             <a href="#" class="text-grayishBlue hover:underline">Will hydrogen-fueled cars ever catch up to Evs</a>
                         </div>
+                        <hr class="pb-4"/>
                     </div>
                     <!--first new post end-->
-    
+                    
                     <!--second new post start-->
                     <div class="">
                         <h1 class="text-offWhite text-bold text-xl font-Inter ">The Downsides of AI Artistry</h1>
                         <div class="pt-2 pb-8">
                             <a href="#" class="text-grayishBlue hover:underline">What are the posible adverse effects of on-demand AI image generator?</a>
                         </div>
+                        <hr class="pb-4"/>
                     </div>
                     <!--second new post end-->
     
